Spike out rough landing page grid

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -20,6 +20,11 @@
 .b--dark-tan { border-color: #edede9; }
 
 /*
+ * Vertical alignment
+ */
+.v-tt { vertical-align: text-top; }
+
+/*
  * Filters
  */
 .filter-blur { filter: blur(8px); }
