--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -7,6 +7,9 @@
 
     <p>These are the official and comprehensive man pages that are included in the Git package itself.</p>
 
+    <!-- Star icon -->
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg> <span class="mid-gray f6">Frequently accessed man pages</span>
+
     <div class="mt4 manual-grid">
       <div class="pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Setup and config</h3>
@@ -24,40 +27,64 @@
       <div class="pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Getting and creating projects</h3>
 
-        <h4 class="f5 mb0"><a href="/manuals/git-init">init</a></h4>
+        <h4 class="f5 mb0">
+          <!-- Star icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+          <a href="/manuals/git-init">init</a>
+        </h4>
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
-        <h4 class="f5 mb0"><a href="/manuals/git-init">clone</a></h4>
+        <h4 class="f5 mb0">
+          <!-- Star icon -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+          <a href="/manuals/git-init">clone</a>
+        </h4>
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
       <div class="gc3 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Basic snapshotting</h3>
 
-        <div class="fl w-100 w-third-ns pa2">
-          <h4 class="f5 mb0"><a href="/manuals/git-init">add</a></h4>
+        <div class="fl w-100 w-third-ns pr5">
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">add</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
           <h4 class="f5 mb0"><a href="/manuals/git-init">status</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
-          <h4 class="f5 mb0"><a href="/manuals/git-init">diff</a></h4>
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">diff</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
-          <h4 class="f5 mb0"><a href="/manuals/git-init">commit</a></h4>
+        <div class="fl w-100 w-third-ns ph3">
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">commit</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
           <h4 class="f5 mb0"><a href="/manuals/git-init">reset</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
-          <h4 class="f5 mb0"><a href="/manuals/git-init">rm</a></h4>
+        <div class="fl w-100 w-third-ns ph4">
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">rm</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
-          <h4 class="f5 mb0"><a href="/manuals/git-init">reset</a></h4>
+          <h4 class="f5 mb0"><a href="/manuals/git-init">mv</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
       </div>
@@ -65,18 +92,26 @@
       <div class="gc3 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Branching and merging</h3>
 
-        <div class="fl w-100 w-third-ns pa2">
-          <h4 class="f5 mb0"><a href="/manuals/git-init">branch</a></h4>
+        <div class="fl w-100 w-third-ns">
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">branch</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
-          <h4 class="f5 mb0"><a href="/manuals/git-init">checkout</a></h4>
+          <h4 class="f5 mb0">
+            <!-- Star icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+            <a href="/manuals/git-init">checkout</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
           <h4 class="f5 mb0"><a href="/manuals/git-init">merge</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">mergetool</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -87,7 +122,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">tag</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -99,7 +134,7 @@
       <div class="gc2 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Sharing and updating projects</h3>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">fetch</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -110,7 +145,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">remote</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -122,18 +157,20 @@
       <div class="gc2 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Inspection and comparison</h3>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">show</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
           <h4 class="f5 mb0"><a href="/manuals/git-init">log</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
-          <h4 class="f5 mb0"><a href="/manuals/git-init">diff</a></h4>
+          <h4 class="f5 mb0">
+            <a href="/manuals/git-init">diff</a>
+          </h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">rebase</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -145,7 +182,7 @@
       <div class="gc2 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Patching</h3>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">apply</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -156,7 +193,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">rebase</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -181,7 +218,7 @@
       <div class="gc2 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Email</h3>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">am</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -192,7 +229,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-50-ns pa2">
+        <div class="fl w-100 w-50-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">send-email</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -224,7 +261,7 @@
       <div class="gc3 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Guides</h3>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">gitattributes</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -235,7 +272,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">gitignore</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -246,7 +283,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">Tutorial</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -258,7 +295,7 @@
       <div class="gc3 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Administration</h3>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">clean</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -269,7 +306,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">reflog</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -280,7 +317,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">archive</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -292,7 +329,7 @@
       <div class="gc3 pa3 shadow-1 br2 bg-near-white">
         <h3 class="mv0 f4 fw5 orange">Plumbing commands</h3>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">cat-file</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -315,7 +352,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
         </div>
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">hash-object</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
@@ -335,7 +372,7 @@
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
         </div>
 
-        <div class="fl w-100 w-third-ns pa2">
+        <div class="fl w-100 w-third-ns">
           <h4 class="f5 mb0"><a href="/manuals/git-init">show-ref</a></h4>
           <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
 
