added href using #id.

--- a/app/views/doc/_example.html.erb
+++ b/app/views/doc/_example.html.erb
@@ -684,7 +684,7 @@
   <h2 id="_notes">NOTES</h2>
   <div class="sectionbody">
   <div class="paragraph"><p>You should understand the implications of using <em>git rebase</em> on a
-  repository that you share.  See also RECOVERING FROM UPSTREAM REBASE
+  repository that you share.  See also <a href="#_recovering_from_upstream_rebase">RECOVERING FROM UPSTREAM REBASE</a>
   below.</p></div>
   <div class="paragraph"><p>When the git-rebase command is run, it will first execute a "pre-rebase"
   hook if one exists.  You can use this hook to do sanity checks and
