Fix links to the wrong Git web interface

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -39,7 +39,7 @@
     details). Note that you do not need to subscribe to the list to send
     to it. You can help us out by attempting to reproduce the bug in the latest
     released version of git, or if you're willing to build git from source, the
-    <a href="https://github.com/git/git/tree/next"><code>next</code> branch</a>.
+    <a href="https://git.kernel.org/pub/scm/git/git.git/?h=next"><code>next</code> branch</a>.
     Sometimes an attempted fix may be pending in this branch, in which case
     your feedback as to whether the fix worked for you will be appreciated.
   </p>
@@ -78,5 +78,5 @@
   <h2> Contributing to Git </h2>
 
   <p>
-    The <a href="https://github.com/git/git/tree/master/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines">coding guidelines</a>, you can learn <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">how to submit patches</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
+    The <a href="https://git.kernel.org/pub/scm/git/git.git/tree/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://git.kernel.org/pub/scm/git/git.git/tree/Documentation/CodingGuidelines">coding guidelines</a>, you can learn <a href="https://git.kernel.org/pub/scm/git/git.git/tree/Documentation/SubmittingPatches">how to submit patches</a>. For those looking to get more deeply involved, there is a <a href="https://git.kernel.org/pub/scm/git/git.git/tree/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
   </p>
