--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -29,7 +29,7 @@
     Bug reports and suggestions may be made in the progit2 repository.
 
     <li>The reference manual is imported from the Git project, and is
-    available under the <a href="https://github.com/git/git/blob/master/COPYING">GPL</a>.
+    available under the <a href="https://git.kernel.org/pub/scm/git/git.git/tree/COPYING">GPL</a>.
     Bug reports and suggestions should be made to the upstream
     <a href="/community">Git community</a>.
 
