--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <td nowrap="true"><%= link_to "Windows Build", "/download/win", class: 'icon windows', id: 'alt-link' %></td>
-        <td nowrap="true"><%= link_to "Source Code", "https://github.com/git/git", class: 'icon source' %></td>
+        <td nowrap="true"><%= link_to "Source Code", "https://git.kernel.org/pub/scm/git/git.git/", class: 'icon source' %></td>
       </tr>
     </table>
 </section>
