--- a/app/views/downloads/index.html.erb
+++ b/app/views/downloads/index.html.erb
@@ -28,7 +28,7 @@
         </table>
       </div>
       <p>
-        <a href="https://www.kernel.org/pub/software/scm/git/">Older releases</a> are available and the <a href="https://github.com/git/git">Git source repository</a> is on GitHub.
+        <a href="https://www.kernel.org/pub/software/scm/git/">Older releases</a> are available and the <a href="https://git.kernel.org/pub/scm/git/git.git/">Git source repository</a> is available on kernel.org.
       </p>
     </div>
     <div class="column-right">
@@ -64,9 +64,9 @@
     If you already have Git installed, you can get the latest development version via Git itself:
   </p>
   <code>
-    git clone https://github.com/git/git
+    git clone https://git.kernel.org/pub/scm/git/git.git
   </code>
   <p>
-    You can also always browse the current contents of the git repository using the <a href="https://github.com/git/git">web interface</a>.
+    You can also always browse the current contents of the git repository using the <a href="https://git.kernel.org/pub/scm/git/git.git/">web interface</a>.
   </p>
 </div>
