--- a/app/views/shared/_monitor.html.erb
+++ b/app/views/shared/_monitor.html.erb
@@ -12,5 +12,9 @@
   </span>
   <span data-mac="<%= latest_mac_installer %>" data-win="<%= latest_win_installer %>" id="installer-version"></span>
 
-  <%= link_to "Download Source Code", "https://www.kernel.org/pub/software/scm/git/", {:class => 'button', :id => 'download-link'} %>
+  <a class="button" id="download-link" href="https://www.kernel.org/pub/software/scm/git/">
+    <noscript>
+      Download Source Code
+    </noscript>
+  </a>
 </div>
