--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -21,8 +21,7 @@ This book is available in
   <table>
     <tr><td><a href="/book/cs">Čeština</a>,</td></tr>
   <tr><td><a href="/book/id">Indonesian</a>,</td></tr>
-<!--  <a href="/book/fi">Suomi</a>,
-  <a href="/book/mk">Македонски</a>, -->
+<!--  <a href="/book/fi">Suomi</a>, -->
   <tr><td><a href="/book/pl">Polski</a>,</td></tr>
   <tr><td><a href="/book/sr">Српски</a>,</td></tr>
   <tr><td><a href="/book/tl">Tagalog</a>,</td></tr>
@@ -44,6 +43,7 @@ This book is available in
 <!--  <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>, -->
   <tr><td><a href="/book/it">Italiano</a>,</td></tr>
+  <tr><td><a href="/book/mk">Македонски</a>,</td></tr>
 <!--  <a href="/book/no-nb">Norwegian Bokmål</a>, -->
   <tr><td><a href="/book/ms">Bahasa Melayu</a>,</td></tr>
   <tr><td><a href="/book/pl">Polski</a>,</td></tr>
