--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -95,6 +95,12 @@
           Master versioning and manage your code with Git by controlling its workflow and using it for your projects.
         </p>
       </li>
+       <li>
+        <h4><a href="https://www.packtpub.com/application-development/hands-version-control-git-video">Hands-On Version Control with Git [Video]</a></h4>
+        <p class='description'>
+          Better project workflows with Distributed Version Control.
+        </p>
+      </li>     
     </ul>
   </div>
 </div>
