--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -40,11 +40,18 @@
       </li>
       <li>
         <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://www.packtpub.com/sites/default/files/B06881.png" width="113"/></a>
-        <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition">Git Essentials - Second Edition</a></h4>
+        <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition">Git Version Control Cookbook - Second Edition</a></h4>
         <p class='description'>
           By Ferdinando Santacroce
         </p>
       </li>
+      <li>
+        <a href="https://www.amazon.com/dp/1789137543"><img src="https://www.packtpub.com/sites/default/files/B10764_MockupCover.png" width="113"/></a>
+        <h4><a href="https://www.amazon.com/dp/1789137543">Git Essentials - Second Edition</a></h4>
+        <p class='description'>
+          By Kenneth Geisshirt
+        </p>
+      </li>      
     </ul>
   </div>
   <div class='column-right'>
