--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -45,6 +45,13 @@
           By Ferdinando Santacroce
         </p>
       </li>
+     <li>
+        <a href="https://www.amazon.com/dp/1789137543"><img src="https://www.packtpub.com/sites/default/files/B10764_MockupCover.png" width="113"/></a>
+        <h4><a href="https://www.amazon.com/dp/1789137543">Git Version Control Cookbook - Second Edition</a></h4>
+        <p class='description'>
+          By Kenneth Geisshirt
+        </p>
+      </li>      
     </ul>
   </div>
   <div class='column-right'>
