--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -73,6 +73,12 @@
           Better project workflows with Distributed Version Control.
         </p>
       </li>
+      <li>
+        <h4><a href="https://www.packtpub.com/web-development/learn-git-3-hours-video">Learn Git in 3 Hours [Video]</a></h4>
+        <p class='description'>
+          Build powerful and effective projects using Git Version Control Systems.
+        </p>
+      </li>      
     </ul>
   </div>
   <div class='column-right'>
