Remove custom partial method

--- a/app/views/downloads/index.html.erb
+++ b/app/views/downloads/index.html.erb
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div class="column-right">
-      <%= partial 'shared/monitor' %>
+      <%= render partial: 'shared/monitor' %>
     </div>
   </div>
   <div class="callout" id="more-downloads">
