--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -43,7 +43,7 @@
     </div>
   </section>
   <section id="front-downloads">
-    <%= partial 'shared/monitor' %>
+    <%= render partial: 'shared/monitor' %>
     <table>
       <tr>
         <td nowrap="true"><%= link_to "Graphical UIs", "/downloads/guis", class: 'icon gui', id: 'gui-link' %></td>
