Replace banner helper with partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
 
 <body id="<%= @section %>">
 
+  <%# <%= render layout: "shared/banner", locals: { id: "freedom-conservancy", dismissable: true, duration: 1 } do %>
+    <!-- Fill in banner content here -->
+  <%# <% end %>
+
   <div class="inner">
     <%= render partial: "shared/header" %>
   </div> <!-- .inner -->
