--- a/app/views/downloads/guis/index.html.erb
+++ b/app/views/downloads/guis/index.html.erb
@@ -32,7 +32,7 @@
   <div class="two-column">
     <ul class="gui-thumbnails">
       <% guis_info.sort_by { |g| g["order"] }.each do |gui| %>
-        <li class="<%= platformsToCssClass(gui["platforms"]).join(' ') %>">
+        <li class="<%= platforms_to_css_class(gui["platforms"]).join(' ') %>">
           <%= link_to(image_tag("#{gui['image_tag']}", {:width => '294', :height => '166'}), "#{gui['url']}") %>
           <h4>
             <%= link_to("#{gui['name']}", "#{gui['url']}") %>
