Start of book styling

--- a/app/assets/stylesheets/src/base.scss
+++ b/app/assets/stylesheets/src/base.scss
@@ -3,3 +3,20 @@ a {
   @extend .link;
   @extend .hover-u;
 }
+
+pre {
+  @extend .pre;
+  @extend .code;
+  @extend .bg-white-50;
+  @extend .pa3;
+  @extend .dark-gray;
+  @extend .br2;
+  @extend .f6;
+  @extend .lh-copy;
+}
+
+code {
+  @extend .code;
+  @extend .near-black;
+  @extend .f6;
+}
