--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -1,25 +1,29 @@
 <% @section = 'book' %>
 
-<% content_for :sidebar do %>
-  <%= render 'translations' %>
-<% end %>
+<div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
+  <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l">
+    <span class="dib mb2 br2 pv1 ph2 mid-gray ba b--moon-gray f6">
+      <%= @book.edition == 2 ? "2nd" : "1st" %> edition
+    </span>
+    <div class="book-content">
+      <% if !@content.title.empty? %>
+        <h1><%= @content.cs_number %> <%= raw @content.chapter.title %> - <%= raw @content.title %></h1>
+      <% end %>
+      <%= raw linkify(@content.html, @content) %>
+    </div>
+  </div>
 
-<div id='book-chapters'>
-  <%= render 'chapters' %>
-  <% if @book.edition == 2%>
-    <span class="light" id="edition">
-      2nd Edition
-    </span>
-  <% else %>
-    <span class="light" id="edition">
-      1st Edition
-    </span>
-  <% end %>
+  <!-- Sidebar links -->
+  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container">
+    <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
+      Chapters
+    </button>
+    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
+      <%= render 'chapters' %>
+    </div>
+  </div>
 </div>
 
-<div id='main' class="book edition<%= @book.edition %>">
-  <% if !@content.title.empty? %>
-    <h1><%= @content.cs_number %> <%=raw @content.chapter.title %> - <%=raw @content.title %></h1>
-  <% end %>
-  <div><%=raw linkify(@content.html, @content) %></div>
-</div>
+<!-- -------------- -->
+
+<%# render 'translations' %>
