--- a/app/assets/stylesheets/src/book.scss
+++ b/app/assets/stylesheets/src/book.scss
@@ -1,39 +1,4 @@
-.manual-grid {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(3, 1fr);
-  // grid-template-rows: auto;
-  // grid-template-rows: fit-content(20%);
-  grid-auto-flow: dense;
-  grid-gap: 2em;
-}
-
-.gr2 {
-  grid-row: span 2;
-}
-
-.gr3 {
-  grid-row: span 3;
-}
-
-.gr4 {
-  grid-row: span 4;
-}
-
-.gc2 {
-  grid-column: span 2;
-}
-
-.gc3 {
-  grid-column: span 3;
-}
-
-/*
- * Markup for individual man pages comes from asciicdoc backend.
- * Since we don't (easily) have control over the markup, we extend
- * Tachyons classes here.
- */
-.sect1 {
+.book-content {
   .anchor {
     @extend .absolute;
     @extend .fw3;
@@ -45,6 +10,10 @@
     &::before {
       content: '#';
     }
+  }
+
+  h1 {
+    @extend .f3;
   }
 
   h2 {
