Adding githooks link to reference page
https://git-scm.com/docs/githooks

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -3,6 +3,7 @@
   <li><%= man('gitattributes') %></li>
   <li><%= man('giteveryday', 'Everyday Git') %></li>
   <li><%= man('gitglossary', 'Glossary') %></li>
+  <li><%= man('githooks') %></li>
   <li><%= man('gitignore') %></li>
   <li><%= man('gitmodules') %></li>
   <li><%= man('gitrevisions', 'Revisions') %></li>
