--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -1,24 +1,27 @@
-<ol class='book-toc'>
+<ol class="list pl0">
   <% per_column = (@book.chapters.count / 3.0).ceil -%>
   <% start      = per_column * (column - 1)       -%>
   <% stop       = start + (per_column - 1)        -%>
+
   <% @book.chapters.includes(:sections)[start..stop].each do |chapter| %>
-  <% if chapter %>
-  <% if chapter.sections.size > 0 %>
-  <li class='chapter'>
-  <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
-    <ol>
-      <% chapter.sections.each do |section| %>
-        <% if !section.title.empty? %>
-          <li>
-            <%= chapter.cs_number %>.<%= section.number %>
-            <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-          </li>
-        <% end %>
+    <% if chapter %>
+      <% if chapter.sections.size > 0 %>
+        <li>
+          <h2 class="f5 fw6">
+            <%= chapter.cs_number %>.
+            <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a>
+          </h2>
+          <ol class="list pl0">
+            <% chapter.sections.each do |section| %>
+              <% if !section.title.empty? %>
+                <li>
+                  <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+                </li>
+              <% end %>
+            <% end %>
+          </ol>
+        </li>
       <% end %>
-    </ol>
-  </li>
-  <% end %>
-  <% end %>
+    <% end %>
   <% end %>
 </ol>
