Remove columns logic

--- a/app/views/books/_chapters.html.erb
+++ b/app/views/books/_chapters.html.erb
@@ -1,5 +1,3 @@
-<div class='dropdown-panel' id='chapters-dropdown'>
-  <%= render :partial => 'chapter_listings', :locals => {:column => 1} %>
-  <%= render :partial => 'chapter_listings', :locals => {:column => 2} %>
-  <%= render :partial => 'chapter_listings', :locals => {:column => 3} %>
+<div class="dropdown-panel">
+  <%= render :partial => 'chapter_listings' %>
 </div>
