--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -16,7 +16,9 @@
       Chapters
     </button>
     <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
-      <%= render 'chapters' %>
+      <div class="dropdown-panel">
+        <%= render :partial => 'chapter_listings' %>
+      </div>
     </div>
   </div>
 </div>
