--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -1,9 +1,5 @@
 <ol class="list pl0">
-  <% per_column = (@book.chapters.count / 3.0).ceil -%>
-  <% start      = per_column * (column - 1)       -%>
-  <% stop       = start + (per_column - 1)        -%>
-
-  <% @book.chapters.includes(:sections)[start..stop].each do |chapter| %>
+  <% @book.chapters.includes(:sections).each do |chapter| %>
     <% if chapter %>
       <% if chapter.sections.size > 0 %>
         <li>
