Use select menu for language options

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -1,62 +1,39 @@
-<p>
-This book is available in
-  <a href="/book/en">English</a>.
-</p>
-<p>
-  Full translation available in
-  <table>
-  <tr><td><a href="/book/bg">български език</a>,</td></tr>
-  <tr><td><a href="/book/es">Español</a>,</td></tr>
-  <tr><td><a href="/book/fr">Français</a>,</td></tr>
-  <tr><td><a href="/book/ja">日本語</a>,</td></tr>
-  <tr><td><a href="/book/ko">한국어</a>,</td></tr>
-  <tr><td><a href="/book/nl">Nederlands</a>,</td></tr>
-  <tr><td><a href="/book/ru">Русский</a>,</td></tr>
-  <tr><td><a href="/book/uk">Українська</a></td></tr>
-  <tr><td><a href="/book/zh">简体中文</a>,</td></tr>
-  </table>
-</p>
-<p>
-  Partial translations available in
-  <table>
-    <tr><td><a href="/book/cs">Čeština</a>,</td></tr>
-  <tr><td><a href="/book/id">Indonesian</a>,</td></tr>
-<!--  <a href="/book/fi">Suomi</a>, -->
-  <tr><td><a href="/book/pl">Polski</a>,</td></tr>
-  <tr><td><a href="/book/sr">Српски</a>,</td></tr>
-  <tr><td><a href="/book/tl">Tagalog</a>,</td></tr>
-  <tr><td><a href="/book/zh-tw">繁體中文</a>,</td></tr>
-  </table>
-</p>
-<p>
-  Translations started for
-  <table>
-<!--  <tr><td><a href="/book/ar">Arabic</a>,</td></tr>
-   <a href="/book/az">Azərbaycan dili</a>, -->
-  <tr><td><a href="/book/be">Беларуская</a>,</td></tr>
-<!--  <a href="/book/ca">Català</a>, -->
-   <tr><td><a href="/book/de">Deutsch</a>,</td></tr>
-<!-- <a href="/book/eo">Esperanto</a>,
-     <a href="/book/es-ni">Español (Nicaragua)</a>, -->
-  <tr><td><a href="/book/fa" dir="rtl">فارسی</a>,</td></tr>
-  <tr><td><a href="/book/gr">Ελληνικά</a>,</td></tr>
-<!--  <a href="/book/hi">हिन्दी</a>,
-  <a href="/book/hu">Magyar</a>, -->
-  <tr><td><a href="/book/it">Italiano</a>,</td></tr>
-  <tr><td><a href="/book/mk">Македонски</a>,</td></tr>
-<!--  <a href="/book/no-nb">Norwegian Bokmål</a>, -->
-  <tr><td><a href="/book/ms">Bahasa Melayu</a>,</td></tr>
-  <tr><td><a href="/book/pl">Polski</a>,</td></tr>
-  <tr><td><a href="/book/pt-br">Português (Brasil)</a>,</td></tr>
-<!--  <a href="/book/ro">Română</a>,
-  <tr><td><a href="/book/th">ภาษาไทย</a>,</td></tr> -->
-<!--  <a href="/book/vi">Tiếng Việt</a>, -->
-  <tr><td><a href="/book/tr">Türkçe</a>,</td></tr>
-<tr><td><a href="/book/uz/v2">Ўзбекча</a>.</td></tr>
-</table>
-</p>
-<hr class="sidebar"/>
-<p>
-The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></br>
-Patches, suggestions and comments are welcome.
-</p>
+<form class="js-book-lang pv2 " method="get" action="#">
+  <select class="w-100" name="lang">
+    <optgroup label="Full translations">
+      <option title="English" data-locale="en" value="en" <%= "selected" if @book.code == "en" %>>English</option>
+      <option title="български език" data-locale="bg" value="bg" <%= "selected" if @book.code == "bg" %>>български език</option>
+      <option title="Español" data-locale="es" value="es" <%= "selected" if @book.code == "es" %>>Español</option>
+      <option title="Français" data-locale="fr" value="fr" <%= "selected" if @book.code == "fr" %>>Français</option>
+      <option title="日本語" data-locale="ja" value="ja" <%= "selected" if @book.code == "ja" %>>日本語</option>
+      <option title="한국어" data-locale="ko" value="ko" <%= "selected" if @book.code == "ko" %>>한국어</option>
+      <option title="Nederlands" data-locale="nl" value="nl" <%= "selected" if @book.code == "nl" %>>Nederlands</option>
+      <option title="Русский" data-locale="ru" value="ru" <%= "selected" if @book.code == "ru" %>>Русский</option>
+      <option title="Українська" data-locale="uk" value="uk" <%= "selected" if @book.code == "uk" %>>Українська</option>
+      <option title="简体中文" data-locale="zh" value="zh" <%= "selected" if @book.code == "zh" %>>简体中文</option>
+    </optgroup>
+
+    <optgroup label="Partial translations">
+      <option title="Čeština" data-locale="cs" value="cs" <%= "selected" if @book.code == "cs" %>>Čeština</option>
+      <option title="Indonesian" data-locale="id" value="id" <%= "selected" if @book.code == "id" %>>Indonesian</option>
+      <option title="Polski" data-locale="pl" value="pl" <%= "selected" if @book.code == "pl" %>>Polski</option>
+      <option title="Српски" data-locale="sr" value="sr" <%= "selected" if @book.code == "sr" %>>Српски</option>
+      <option title="Tagalog" data-locale="tl" value="tl" <%= "selected" if @book.code == "tl" %>>Tagalog</option>
+      <option title="繁體中文" data-locale="zh-tw" value="zh-tw" <%= "selected" if @book.code == "zh-tw" %>>繁體中文</option>
+    </optgroup>
+
+    <optgroup label="Translations started">
+      <option title="Беларуская" data-locale="be" value="be" <%= "selected" if @book.code == "be" %>>Беларуская</option>
+      <option title="Deutsch" data-locale="de" value="de" <%= "selected" if @book.code == "de" %>>Deutsch</option>
+      <option title="فارسی" data-locale="fa" value="fa" dir="rtl" <%= "selected" if @book.code == "fa" %>>فارسی</option>
+      <option title="Ελληνικά" data-locale="gr" value="gr" <%= "selected" if @book.code == "gr" %>>Ελληνικά</option>
+      <option title="Italiano" data-locale="it" value="it" <%= "selected" if @book.code == "it" %>>Italiano</option>
+      <option title="Македонски" data-locale="mk" value="mk" <%= "selected" if @book.code == "mk" %>>Македонски</option>
+      <option title="Bahasa Melayu" data-locale="ms" value="ms" <%= "selected" if @book.code == "ms" %>>Bahasa Melayu</option>
+      <option title="Português (Brasil)" data-locale="pt-br" value="pt-br" <%= "selected" if @book.code == "pt-br" %>>Português (Brasil)</option>
+      <option title="Türkçe" data-locale="tr" value="tr" <%= "selected" if @book.code == "tr" %>>Türkçe</option>
+      <option title="Ўзбекча" data-locale="uz" value="uz" <%= "selected" if @book.code == "uz" %>>Ўзбекча</option>
+    </optgroup>
+  </select>
+</form>
+
