--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -17,12 +17,14 @@
     </button>
     <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
       <div class="dropdown-panel">
+        <%= render 'translations' %>
         <%= render :partial => 'chapter_listings' %>
+
+        <p class="bt b--moon-gray pt3 f6">
+          The source of this book is
+          <a href="https://github.com/progit/progit2">hosted on GitHub</a>. Patches, suggestions, and comments are welcome.
+        </p>
       </div>
     </div>
   </div>
 </div>
-
-<!-- -------------- -->
-
-<%# render 'translations' %>
