--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,22 +18,46 @@
 
       <ul class="site-nav-links list w-100 w-auto-l pl0 dn_ db-l_ tl tr-l absolute relative-l left-0 top-2 top-0-l bottom-0 ph3 ph4-m ph0-l pv3 pv0-l js-site-nav">
         <li class="db dib-l">
-          <a href="/about" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "about" ? "b--orange" : "b--transparent" %>">About</a>
+          <a href="/about"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "about" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "about" %>aria-current="page"<% end %>>
+            About
+          </a>
         </li>
         <li class="db dib-l">
-          <a href="/manual" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "manual" ? "b--orange" : "b--transparent" %>">Manual</a>
+          <a href="/manual"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "manual" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "manual" %>aria-current="page"<% end %>>
+            Manual
+          </a>
         </li>
         <li class="db dib-l">
-          <a href="/book" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "book" ? "b--orange" : "b--transparent" %>">Book</a>
+          <a href="/book"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bb-l bw1-l bw2 <%= @section == "book" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "book" %>aria-current="page"<% end %>>
+            Book
+          </a>
         </li>
         <li class="db dib-l">
-          <a href="/downloads" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "download" ? "b--orange" : "b--transparent" %>">Download</a>
+          <a href="/downloads"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "download" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "download" %>aria-current="page"<% end %>>
+            Download
+          </a>
         </li>
         <li class="db dib-l">
-          <a href="/resources" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "resources" ? "b--orange" : "b--transparent" %>">Resources</a>
+          <a href="/resources"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "resources" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "resources" %>aria-current="page"<% end %>>
+            Resources
+          </a>
         </li>
         <li class="db dib-l">
-          <a href="/community" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "community" ? "b--orange" : "b--transparent" %>">Community</a>
+          <a href="/community"
+             class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 bl bl-0-l bw1-l bw2 <%= @section == "community" ? "b--orange" : "b--transparent" %>"
+             <% if @section == "community" %>aria-current="page"<% end %>>
+            Community
+          </a>
         </li>
       </ul>
     </nav>
