--- a/app/views/doc/_ext_tutorials.erb
+++ b/app/views/doc/_ext_tutorials.erb
@@ -113,6 +113,12 @@
           Master versioning and manage your code with Git by controlling its workflow and using it for your projects.
         </p>
       </li>
+      <li>
+        <h4><a href="https://www.packtpub.com/web-development/git-and-version-control-video">Git and Version Control [Video]</a></h4>
+        <p class='description'>
+          Learn the basics of Git and Version Control through detailed and easy to follow steps.
+        </p>
+      </li>      
     </ul>
   </div>
 </div>
