Better orange contrast

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -5,7 +5,7 @@
 .dark-gray { color: #4e443c; }
 .mid-gray { color: #756f6a; }
 .near-white { color: #fcfcfa; }
-.orange { color: #e05e0b; }
+.orange { color: #c24a00; }
 .blue { color: #0f758c; }
 
 /*
