--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -1,5 +1,5 @@
 <form class="js-book-lang pv2 " method="get" action="#">
-  <select class="w-100 b--moon-gray dark-gray" name="lang">
+  <select class="w-100 b--moon-gray dark-gray" name="lang" aria-label="Select language">
     <optgroup label="Full translations">
       <option title="English" data-locale="en" value="en" <%= "selected" if @book.code == "en" %>>English</option>
       <option title="български език" data-locale="bg" value="bg" <%= "selected" if @book.code == "bg" %>>български език</option>
