--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -70,7 +70,7 @@
     </button>
     <div class="search-box pv-0 order-3 dn db-l w-80 w-25-l absolute relative-l">
       <form action="#">
-        <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba focus-bg-white b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…">
+        <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba focus-bg-white b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…" aria-label="Site search">
       </form>
     </div>
   </div>
