--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,8 @@
 
   <body class="sans-serif bg-tan dark-gray mw9 center page-body js-page-body" id="<%= @section %>">
     <%= render partial: "shared/header" %>
-
-    <%# <%= render layout: "shared/banner", locals: { id: "freedom-conservancy", dismissable: true, duration: 1 } do %>
-      <!-- Fill in banner content here -->
-    <%# <% end %>
-
     <div class="page-overlay">
-      <%= yield %>
+      <main><%= yield %></main>
       <%= render partial: "shared/footer" %>
     </div>
   </body>
