--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -18,13 +18,13 @@
               <span class="b dib w3"><%= v[:name] %></span>
               <span class="dn dib-l w3 pr2">
                 <% v[:diff][0].times do %>
-                  <img src="/images/icons/green-dot.png" class="nl-1px" />
+                  <img src="/images/icons/green-dot.png" class="nl-1px" alt="Green dot" />
                 <% end %>
                 <% v[:diff][1].times do %>
-                  <img src="/images/icons/red-dot.png" class="nl-1px" />
+                  <img src="/images/icons/red-dot.png" class="nl-1px" alt="Green dot" />
                 <% end %>
                 <% v[:diff][2].times do %>
-                  <img src="/images/icons/grey-dot.png" class="nl-1px" />
+                  <img src="/images/icons/grey-dot.png" class="nl-1px" alt="Green dot" />
                 <% end %>
               </span>
               <span class="dib dark-gray"><%= v[:time].strftime("%m/%d/%y") %></span>
