Update content into new layout

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,48 @@
-<%- @section    = "book" %>
-<%- @page_title = "Book · Git" %>
+<%- @page_title = "Pro Git Book · Git" %>
+<% @section = 'book' %>
 
-<% content_for :sidebar do %>
-  <%= render 'translations' %>
-<% end %>
+<div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
+  <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l lh-copy">
+    <p>
+      The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
+    </p>
 
+    <ol class="list pl0">
+      <% @book.chapters.includes(:sections).each do |chapter| %>
+        <% next if chapter.sections.size == 0 %>
+        <li class="chapter">
+        <h2 class="f4"><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
+          <ol class="list pl4">
+            <% chapter.sections.each do |section| %>
+              <% if !section.title.empty? %>
+                <li>
+                  <span class="pr2"><%= chapter.cs_number %>.<%= section.number %></span>
+                  <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+                </li>
+              <% end %>
+            <% end %>
+          </ol>
+        </li>
+      <% end %>
+    </ol>
+  </div>
+
+  <!-- Sidebar links -->
+  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
+    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
+      <div class="dropdown-panel">
+        <%= render 'translations' %>
+
+        <p class="bt b--moon-gray pt3 f6">
+          The source of this book is
+          <a href="https://github.com/progit/progit2">hosted on GitHub</a>. Patches, suggestions, and comments are welcome.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
 <div id='main'>
   <h1>Book</h1>
   <% if @book.edition == 2 %>
@@ -62,3 +100,4 @@
   <% end %>
   </ol>
 </div>
+-->
