[book] Add Slovene translation

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -23,6 +23,7 @@ This book is available in
   <tr><td><a href="/book/id">Indonesian</a>,</td></tr>
 <!--  <a href="/book/fi">Suomi</a>, -->
   <tr><td><a href="/book/pl">Polski</a>,</td></tr>
+  <tr><td><a href="/book/sl">Slovenščina</a>,</td></tr>
   <tr><td><a href="/book/sr">Српски</a>,</td></tr>
   <tr><td><a href="/book/tl">Tagalog</a>,</td></tr>
   <tr><td><a href="/book/zh-tw">繁體中文</a>,</td></tr>
