--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -21,10 +21,10 @@
                   <img src="/images/icons/green-dot.png" class="nl-1px" alt="Green dot" />
                 <% end %>
                 <% v[:diff][1].times do %>
-                  <img src="/images/icons/red-dot.png" class="nl-1px" alt="Green dot" />
+                  <img src="/images/icons/red-dot.png" class="nl-1px" alt="Red dot" />
                 <% end %>
                 <% v[:diff][2].times do %>
-                  <img src="/images/icons/grey-dot.png" class="nl-1px" alt="Green dot" />
+                  <img src="/images/icons/grey-dot.png" class="nl-1px" alt="Grey dot" />
                 <% end %>
               </span>
               <span class="dib dark-gray"><%= v[:time].strftime("%m/%d/%y") %></span>
