--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<%- @page_title = "Pro Git Book · Git" %>
+<% @page_title = "Pro Git Book · Git" %>
 <% @section = 'book' %>
 
 <div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
@@ -7,24 +7,28 @@
       The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
     </p>
 
-    <ol class="list pl0">
-      <% @book.chapters.includes(:sections).each do |chapter| %>
-        <% next if chapter.sections.size == 0 %>
-        <li class="chapter">
-        <h2 class="f4"><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
-          <ol class="list pl4">
-            <% chapter.sections.each do |section| %>
-              <% if !section.title.empty? %>
-                <li>
-                  <span class="pr2"><%= chapter.cs_number %>.<%= section.number %></span>
-                  <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-                </li>
-              <% end %>
-            <% end %>
-          </ol>
-        </li>
+    <div class="flex flex-column flex-row-l justify-between">
+      <% @book.chapters.includes(:sections).in_groups(2, false) do |column| %>
+        <ol class="list pl0 pr5 w-50">
+          <% column.each do |chapter| %>
+            <% next if chapter.sections.size == 0 %>
+            <li>
+              <h2 class="f4"><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
+              <ol class="list pl4">
+                <% chapter.sections.each do |section| %>
+                  <% if !section.title.empty? %>
+                    <li>
+                      <span class="pr2"><%= chapter.cs_number %>.<%= section.number %></span>
+                      <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+                    </li>
+                  <% end %>
+                <% end %>
+              </ol>
+            </li>
+          <% end %>
+        </ol>
       <% end %>
-    </ol>
+    </div>
   </div>
 
   <!-- Sidebar links -->
@@ -32,6 +36,32 @@
     <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
       <div class="dropdown-panel">
         <%= render 'translations' %>
+
+        <img  src="/images/progit2.png" class="w-100 pt3" />
+
+        <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
+          <h3>Downloads</h3>
+          <ul class="list pl0">
+            <% if @book.ebook_pdf %>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-tt"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                <a href="<%= @book.ebook_pdf %>">PDF</a> <span class="mid-gray">(12.4 MB)</span>
+              </li>
+            <% end %>
+            <% if @book.ebook_epub %>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-tt"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                <a href="<%= @book.ebook_epub %>">EPUB</a> <span class="mid-gray">(2.5 MB)</span>
+              </li>
+            <% end %>
+            <% if @book.ebook_mobi %>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="v-tt"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                <a href="<%= @book.ebook_mobi %>">MOBI</a> <span class="mid-gray">(9.8 MB)</span>
+              </li>
+            <% end %>
+          </ul>
+        <% end %>
 
         <p class="bt b--moon-gray pt3 f6">
           The source of this book is
@@ -41,63 +71,3 @@
     </div>
   </div>
 </div>
-
-<!--
-<div id='main'>
-  <h1>Book</h1>
-  <% if @book.edition == 2 %>
-    <div style="float:right;margin: -20px 40px 0 40px;">
-      <img  src="/images/progit2.png" width="118" height="157"/>
-      <div style="light">2nd Edition (2014)</div>
-      <div class="switch"><a href="/book/<%= @book.code %>/v1">Switch to 1st Edition</a></div>
-      <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
-      <div class="ebook-download">
-        <h2>Download Ebook</h2>
-        <div class="ebooks">
-          <% if @book.ebook_pdf %>
-            <a href="<%= @book.ebook_pdf %>"><img width="50px" src="/images/pdf.png"/></a>
-          <% end %>
-          <% if @book.ebook_epub %>
-            <a href="<%= @book.ebook_epub %>"><img width="50px" src="/images/epub.png"/></a>
-          <% end %>
-        </div>
-        <div class="ebooks">
-          <% if @book.ebook_mobi %>
-            <a href="<%= @book.ebook_mobi %>"><img width="50px" src="/images/mobi.png"/></a>
-          <% end %>
-        </div>
-      </div>
-      <% end %>
-     </div>
-  <% else %>
-    <div style="float:right;margin: -20px 40px 0 40px;">
-      <img  src="/images/books/pro-git@2x.jpg" width="118" height="157"/>
-      <div>1st Edition (2009)</div>
-      <% if @book.has_edition(2) %>
-        <div class="switch"><a href="/book/<%= @book.code %>/v2">Switch to 2nd Edition</a></div>
-      <% end %>
-    </div>
-  <% end %>
-  <p>
-  The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
-  </p>
-  <ol class='book-toc'>
-    <% @book.chapters.includes(:sections).each do |chapter| %>
-    <% next if chapter.sections.size == 0 %>
-    <li class='chapter'>
-    <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
-      <ol>
-        <% chapter.sections.each do |section| %>
-          <% if !section.title.empty? %>
-            <li>
-              <%= chapter.cs_number %>.<%= section.number %>
-              <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-            </li>
-          <% end %>
-        <% end %>
-      </ol>
-    </li>
-  <% end %>
-  </ol>
-</div>
--->
