Line height tweaks

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,17 +9,20 @@
 
     <div class="flex flex-column flex-row-l justify-between">
       <% @book.chapters.includes(:sections).in_groups(2, false) do |column| %>
-        <ol class="list pl0 pr5 w-50">
+        <ol class="list mt0 pl0 pr5 w-100 w-50-l">
           <% column.each do |chapter| %>
             <% next if chapter.sections.size == 0 %>
             <li>
-              <h2 class="f4"><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
-              <ol class="list pl4">
+              <h2 class="dt f4 lh-title">
+                <span class="dtc pr1"><%= chapter.cs_number %>.</span>
+                <a class="dtc" href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a>
+              </h2>
+              <ol class="list pl3">
                 <% chapter.sections.each do |section| %>
                   <% if !section.title.empty? %>
-                    <li>
-                      <span class="pr2"><%= chapter.cs_number %>.<%= section.number %></span>
-                      <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+                    <li class="dt pb1">
+                      <span class="dtc pr2"><%= chapter.cs_number %>.<%= section.number %></span>
+                      <a class="dtc" href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
                     </li>
                   <% end %>
                 <% end %>
